[package]
name = "sdk"
version = "0.1.0"
edition = "2021"
description = "A tool for Xcode to show SDK paths."
repository = "https://github.com/schwa/sdk-rs"
homepage = "https://github.com/schwa/sdk-rs"
license = "MIT"


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clipboard = "0.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tabled = { version = "0.16.0", features = ["derive"] }
trigram = "0.4.4"
