[dependencies]
clipboard = "0.5.0"
serde_json = "1.0.140"
trigram = "0.4.4"

[dependencies.clap]
features = ["derive"]
version = "4.5.35"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.tabled]
features = ["derive"]
version = "0.16.0"

[package]
description = "A tool for Xcode to show SDK paths."
edition = "2021"
homepage = "https://github.com/schwa/sdk-rs"
license = "MIT"
name = "sdk"
repository = "https://github.com/schwa/sdk-rs"
version = "0.1.1"
